# codechecker

./: .gitignore  README.md  kickoff.sh  pyproject.toml
src/codechecker/: main.py
