[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codechecker"
version = "0.1.0"
description = "Custom Python code checker. On top of pyflakes"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Raman Maładziašyn", email = "maladziashyn@gmail.com" }]
dependencies = [
    "pyflakes>=3.4.0",
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
codechecker = "codechecker.main:main"
